logs/batchjob_4.870.out
Running on host grad01

Initial Time is Wed 18 May 2022 12:42:41 PM -03

Directory is /home/pp12704/trabalho1

This jobs runs on the following nodes:
grad01

JOB_ID:
870

mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
Final Time is Wed 18 May 2022 12:42:42 PM -03
